// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifItem /> debe hacer match con el snapshot  1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="Goku"
      src="https://DBZ.com/goku.jpg"
    />
    <p>
      Goku
    </p>
  </div>
</div>
`;

exports[`Pruebas en <GifItem/> debe hacer match con el snapshot  1`] = `
<div>
  <div
    class="card"
  >
    <img
      alt="title"
      src="url"
    />
    <p>
      title
    </p>
  </div>
</div>
`;
